# adbackup

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
.dependabot/: config.yml
src/: ab_extracting.rs  adb_command.rs  backup.rs  devices.rs  file_transfer.rs  lib.rs  logging.rs  restore.rs
src/database/: management.rs  migration.rs  mod.rs
tests/: blackbox.rs
tests/test_databases/: dummy_db_v1.db
