[package]
name = "adbackup"
version = "0.1.0"
authors = [
    "Julian Raufelder <julian.raufelder@htwg-konstanz.de>",
    "Jonas Reinwald <jonas.reinwald@htwg-konstanz.de>"
]

[lib]
name ="adbackup"
path = "src/lib.rs"
doc = false

[[bin]]
name = "adbackup-cli"
path = "src/bin/adbackup-cli.rs"
doc = false

[dev-dependencies]
hamcrest = "*"

[dependencies]
clap = "~2.19"
clippy = {version = "0.0.103", optional = true}
spectral = "0.6.0"
failure = "0.1.1"
fern = "0.4.4"
log = "0.3"
chrono = "0.4"

[features]
default = []
