[package]
name = "adbackup"
version = "0.5.2"
authors = [
    "Julian Raufelder <julian.raufelder@htwg-konstanz.de>",
    "Jonas Reinwald <jonas.reinwald@htwg-konstanz.de>"
]
description = "backup tool for android written in rust which can either be used as a module and as a cli-tool"
documentation = "https://github.com/bb30/adbackup/blob/master/README.md"
repository = "https://github.com/bb30/adbackup/"
readme = "README.md"
keywords = ["android", "backup"]
license = "MIT"

[lib]
name ="adbackup"
path = "src/lib.rs"
doc = false

[[bin]]
name = "adbackup-cli"
path = "src/bin/adbackup-cli.rs"
doc = false

[dev-dependencies]
hamcrest = "0.1.5"

[dependencies]
clap = "~2.19"
clippy = {version = "0.0.103", optional = true}
spectral = "0.6.0"
failure = "0.1.1"
failure_derive = "0.1.1"
fern = "0.4.4"
log = "0.3"
chrono = "0.4"

[dependencies.rusqlite]
version = "0.14.0"
# functions (closures in queries), trace (sqlite tracing), blob (io access to blobs) if needed
features = ["bundled"]

[features]
default = []
